--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root{
     --bg: #110e1d;
-    --bg2: #0c0c11;
+    --bg2: #030108;
     --font: rgb(210, 198, 221);
     --font2: rgb(161, 153, 172);
     --title: #4F21CE;
@@ -143,12 +143,13 @@ i{
 }
 
 .about_me > h1{
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
     text-align: center;
+
 }
 
 .about_me > P{
+    padding-top: 50px;
     padding-left: 70px;
     padding-right: 70px;
     padding-bottom: 70px;
@@ -169,6 +170,12 @@ i{
     padding-top: 20px;
     padding-bottom: 70px;
 }
+/*.skills p{
+    visibility: hidden;
+}
+#html:hover .html_description {
+    visibility: visible;
+}*/
 
 .skills button{
     background-color: #110e1d;
