--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --subtitle: #4F33A5;
     --links: #9e8ae0;
     --links2: #8261e6;
+    --border: rgba(134, 134, 134, 0.062);
 }
 
 *{
@@ -20,6 +21,7 @@
     font-style: normal;
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 
 a{
@@ -59,9 +61,12 @@ body{
 }
 
 header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     border-bottom: 1px #9e8ae0 solid;
     background-image: linear-gradient(to right, #110e1d 80%, #110f1a );
-    margin: auto;
 }
 header > h1{
     color: var(--font);
@@ -87,10 +92,9 @@ i{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     gap: 0px;
     margin-left: 200px;
-    margin-right: 100px;
     margin-bottom: 180px;
 }
 
@@ -98,13 +102,9 @@ i{
     width: 397px;
 }
 
-/*.photo{
-    img{
-        width: 200px;
-        height: 200px;
-    }
-} */
 .container_hall p{
+    flex-direction: row;
+    justify-content: space-around;
     color: var(--font2);
     font-size: 1.4em;
 }
@@ -156,16 +156,15 @@ i{
     justify-content: center;
 }
 .about_me{
+    flex-direction: column;
     background-color: var(--bg2);
     border-radius: 10px;
     text-align: justify;
     padding: 20px 0px;
-    min-width: 300px;
-    max-width: 550px;
-    min-height: 250px;
-    max-height: 650px;
+    width: 550px;
+    height: 400px;
     font-size: 20px;
-    border: 2px solid rgba(134, 134, 134, 0.267);
+    border: 2px solid var(--border);
 }
 
 .about_me > h1{
@@ -173,7 +172,6 @@ i{
 }
 
 .about_me > P{
-    width: 400px;
     padding-top: 30px;
     padding-left: 70px;
     padding-right: 70px;
@@ -185,8 +183,8 @@ i{
     background-color: var(--bg2);
     padding-top: 10px;
     padding-bottom: 10px;
-    border-radius: 10px;
     margin-top: 60px;
+    border: 2px solid var(--border);
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.205);
 }
 
@@ -339,12 +337,15 @@ i{
     font-size: 1.5em;
     background-color: var(--bg2);
     border-radius: 100px;
+    border: 2px solid var(--border);
 }
 
 .contacts  a:hover{
-    color: var(--links2);
+    border: 2px solid var(--links);
+    background-color: var(--links);
+    color: var(--bg);
     text-shadow: 1px 1px 10px #9e8ae00c;
-    transition: color .3s;
+    transition: color .3s ease-in-out, background-color .3s ease-in-out, border .3s ease-in-out;
 }
 
 .contacts p{
@@ -353,25 +354,36 @@ i{
 
 #icons_contact{
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 60px;
+    text-align: center;
 }
 
 .github{
-    text-align: center;
-    float: right;
+    order: 1 ;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+    
 }
 .linkedin{
-    text-align: center;
-    float: right;
+    order: 1 ;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 .email{
-    text-align: center;
-    float: right;
+    order: 0 ;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 .tel{
-    text-align: center;
-    float: right;
+    order: 0 ;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
 }
 
