--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ i{
     flex-direction: row;
     align-items: center;
     justify-content: start;
-    gap: 0px;
     margin-left: 200px;
     margin-bottom: 180px;
 }
@@ -153,41 +152,34 @@ i{
     transition: background-color .2s ease-in-out, color .2s ease-in-out;
 }
 
-
-.container_about_me{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .about_me{
-    flex-direction: column;
     background-color: var(--bg2);
     border-radius: 10px;
-    text-align: justify;
-    padding: 20px 0px;
-    width: 550px;
-    height: 400px;
+    padding: 10px;
+    width: 500px;
     font-size: 20px;
     border: 2px solid var(--border);
 }
-
-.about_me > h1{
-    text-align: center;
+.container_about_me{
+    display: flex;
+    flex-flow: row nowrap ;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+.about_me_title{
+    text-align: justify;
 }
 
-.about_me > P{
-    padding-top: 30px;
-    padding-left: 70px;
-    padding-right: 70px;
-    padding-bottom: 40px;
+.about_me_text{
+    flex-grow: 0;
+    flex-shrink: 1;
+    margin: 20px;
+    text-align: justify;
+    background-color: #8261e6;
 }
-
 
 .skills{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
     background-color: var(--bg2);
     padding-top: 10px;
     padding-bottom: 10px;
@@ -202,49 +194,32 @@ i{
     padding-bottom: 50px;
 }
 
-.skills button{
+#icon_skills{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 40px;
+}
+.skills #icons{
+    flex-shrink: 0;
+    flex-grow: 0;
     background-color: var(--bg);
     border-radius: 10px;
     width: 100px;
     height: 100px;
     font-size: 40px;
     color: var(--links);
-    border: 2px solid rgba(134, 134, 134, 0.11);
+    border: 1px solid rgba(134, 134, 134, 0.11);
 }
 
-.skills button:hover{
-    border: 2px var(--links) solid;
+.skills #icons:hover{
+    border: 1px var(--links) solid;
     color: var(--links);
     transition: border .3s;
 }
-
-#icon_skills{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 40px;
-    background-color: white;
-}
-/* 
-#htm{
-    flex: 0 1 auto;
-}
-
-#css{
-    flex: 0 1 auto;
-}
-
-#java{
-    flex: 0 1 auto;
-}
-
-#c{
-    flex: 0 1 auto;
-} */
 
 .projects{
     min-width: 300px;
@@ -296,7 +271,7 @@ i{
     border-radius: 10px;
 }
 
-#twp{
+#cordel_box{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -361,7 +336,7 @@ i{
 
 #icons_contact{
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     gap: 60px;
@@ -372,25 +347,25 @@ i{
     order: 1 ;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: auto;
+    flex-basis: 0;
     
 }
 .linkedin{
     order: 1 ;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: auto;
+    flex-basis: 0;
 }
 .email{
     order: 0 ;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: auto;
+    flex-basis: 0;
 }
 .tel{
     order: 0 ;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: auto;
+    flex-basis: 0;
 }
 
