--- a/style.css
+++ b/style.css
@@ -151,21 +151,24 @@ i{
     color: var(--bg);
     transition: background-color .2s ease-in-out, color .2s ease-in-out;
 }
-
 .about_me{
-    background-color: var(--bg2);
-    border-radius: 10px;
-    padding: 10px;
-    width: 500px;
-    font-size: 20px;
-    border: 2px solid var(--border);
-}
-.container_about_me{
+    max-width: 800px;
+    height: 500px;
     display: flex;
-    flex-flow: row nowrap ;
+    flex-flow: column wrap ;
     align-items: center;
     justify-content: center;
     align-content: center;
+    
+}
+.container_about_me{
+    padding: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 2px solid var(--border);
+    background: var(--bg2);
+    margin: auto;
+    width: 500px;
 }
 .about_me_title{
     text-align: justify;
@@ -173,10 +176,9 @@ i{
 
 .about_me_text{
     flex-grow: 0;
-    flex-shrink: 1;
+    flex-shrink: 0;
     margin: 20px;
     text-align: justify;
-    background-color: #8261e6;
 }
 
 .skills{
