--- a/css/style.css
+++ b/css/style.css
@@ -72,15 +72,7 @@ header > h1{
     color: var(--font);
     font-size: 2em;
     text-align: center;
-    padding: 30px;
-}
-
-footer{
-    background-color: #030108;
-    margin: 0%;
     padding: 20px;
-    text-align: center;
-
 }
 
 i{
@@ -90,9 +82,9 @@ i{
 .container_hall{
     height: 450px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
+    flex-flow: column wrap;
+    align-items: start;
+    justify-content: center;
     margin-left: 200px;
     margin-bottom: 180px;
 }
@@ -130,7 +122,7 @@ i{
     padding: 10px 20px;
     border: 2px solid var(--links2);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.24);
-    font-size: 1em;
+    font-size: 18px;
 }
 .container_hall button:hover{
     background-color: var(--links);
@@ -146,12 +138,20 @@ i{
 }
 
 .container_hall .cv:hover{
-    background-color: var(--links2);
-    border: 2px solid var(--links2);
+    background-color: var(--links);
+    border: 2px solid var(--links);
     color: var(--bg);
     transition: background-color .2s ease-in-out, color .2s ease-in-out;
 }
-.about_me{
+
+.container_hall .go_contacts{
+    
+}
+.container_hall .go_contacts:hover{
+    transform: scale(1.15);
+    transition: transform .3s ease-in-out, background-color .3s ease-in-out, border .3s ease-in-out;
+}
+.container_about_me{
     display: flex;
     flex-flow: column nowrap ;
     align-items: center;
@@ -159,7 +159,7 @@ i{
     align-content: center;
     
 }
-.container_about_me{
+.about_me{
     padding: 50px;
     border-radius: 15px;
     border: 2px solid var(--border);
@@ -239,24 +239,28 @@ i{
 }
 
 .projects  p{
-    font-size: 20px;
+    font-size: 24px;
     color: var(--font2);
     text-align: justify;
     padding-bottom: 30px;
     
 }
-
-.projects  a{
+/* #4F33A5 #4F21CE #9e8ae0 #8261e6*/
+.projects button{
+    background-color: var(--links2);
+    border: none;
     text-decoration: none;
-    text-align: center;
-    padding-top: 20px;
-    font-size: 20px;
-    color: var(--font2);
+    padding: 13px;
+    font-size: 18px;
+    border-radius: 30px;
+    color: var(--bg);
 }
 
-.projects  a:hover{
-    text-shadow: 1px 1px 3px#6d42ec6b;
-    color: var(--links);
+.projects  button:hover{
+    background-color: var(--links);
+    transform: scale(1.1);
+    transition: transform .3s ease-in-out, background-color .5s ease-in-out;
+
 }
 
 #cordel_pai{
@@ -264,39 +268,25 @@ i{
 }
 
 #cordel{
-    width: 200px;
-    height: 120px;
+    width: 250px;
+    height: 126px;
     border-radius: 10px;
 }
 
 #cordel_box{
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 30px;
     padding-bottom: 30px;
     margin: auto;
-    width: 300px;
+    width: 400px;
     border: 2px var(--links) solid;
 }
 
 #title_cordel{
     padding: 10px;
-}
-
-.see{
-    background-color: var(--bg1);
-    color: var(--links);
-    text-decoration: none;
-    border-radius: 10px;
-    padding: 5px;
-    border: var(--bg);
-    font-size: 1.2em;
-}
-
-.see:hover{
-    color: var(--links2);
-    text-decoration: underline;
 }
 
 .contacts{
@@ -319,13 +309,16 @@ i{
     border-radius: 100px;
     border: 2px solid var(--border);
 }
-
-.contacts  a:hover{
-    border: 2px solid var(--links);
-    background-color: var(--links);
+.contacts  a:active{
+    border: 2px solid var(--links2);
+    background-color: var(--links2);
     color: var(--bg);
     text-shadow: 1px 1px 10px #9e8ae00c;
     transition: color .3s ease-in-out, background-color .3s ease-in-out, border .3s ease-in-out;
+}
+
+.contacts  a:hover{
+    color: var(--links);
 }
 
 .contacts p{
@@ -339,6 +332,11 @@ i{
     align-items: center;
     gap: 60px;
     text-align: center;
+}
+
+.github:hover, .linkedin:hover, .email:hover, .tel:hover{
+    transform: scale(1.2);
+    transition: transform .3s ease-in-out;
 }
 
 .github{
@@ -365,5 +363,12 @@ i{
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 0;
+}
+
+footer{
+    background-color: #030108;
+    margin: 0%;
+    padding: 20px;
+    text-align: center;
 }
 
