--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,20 +1,25 @@
 @media screen and (min-width:481px) and (max-width:768px){
     header h1{
-        font-size: 2em;
+        font-size: 1.8em;
         padding: 10px
+    }
+    h1{
+        font-size: 2.7em;
+    }
+    h2{
+        font-size: 2.5em;
     }
     .container_hall{
         display: flex;
-        flex-flow: column nowrap;
-        align-items: start;
+        flex-flow: column wrap;
+        align-items: center;
         justify-content: center;
         align-content: center;
-        margin-left: none;
+        margin-left: 0px;
         margin-top: 10px;
         margin-bottom: 150px;
     }
     .hello{
-        width: 306px;
         align-items: baseline;
         text-align: center;
     }
@@ -44,7 +49,7 @@
         padding: 9px 10px;
         border: 2px solid var(--links2);
         box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.24);
-        font-size: 1em;
+        font-size: 16px;
     }
     .container_hall button:hover{
         background-color: var(--links);
@@ -52,16 +57,184 @@
         box-shadow: none;
         transition: background-color .2s ease-in-out, border .2s ease-in-out;
     }
-    
-    .container_hall .cv{
-        background-color: var(--bg);
-        border: 2px solid var(--links2);
+    .container_about_me{
+        display: flex;
+        flex-flow: column nowrap ;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        
+    }
+    .about_me{
+        padding: 50px;
+        border-radius: 10px;
+        border: 2px solid var(--border);
+        background: var(--bg2);
+        width: 440px;
+    }
+    .container_about_me p{
+        display: flex;
+        text-align: justify;
         color: var(--font);
+        font-size: 20px;
+    }
+    .container_about_me h1{
+        display: flex;
+        font-size: 2.7em;
+        text-align: center;
+        padding-bottom: 35px;
+    }
+    .skills{
+        background-color: var(--bg2);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-top: 200px;
+        border: 2px solid var(--border);
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.205);
     }
     
-    .container_hall .cv:hover{
-        background-color: var(--links2);
-        border: 2px solid var(--links2);
-        color: var(--bg);
-        transition: background-color .2s ease-in-out, color .2s ease-in-out;
+    .skills > h1{
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 50px;
     }
+    
+    #icon_skills{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        gap: 20px;
+        margin-bottom: 40px;
+    }
+    .skills #icons{
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        flex-shrink: 1;
+        flex-grow: 0;
+        background-color: var(--bg);
+        border-radius: 10px;
+        width: 80px;
+        height: 80px;
+        font-size: 30px;
+        color: var(--links);
+        border: 1px solid rgba(134, 134, 134, 0.11);
+    }
+    
+    .skills #icons:hover{
+        border: 1px var(--links) solid;
+        color: var(--links);
+        transition: border .3s ease-in-out;
+    }
+    
+
+    .projects{
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        padding-top: 150px;
+    }
+
+    .projects h2{
+        color: var(--links2);
+        font-weight: 500;
+    }
+
+    .projects  p{
+        font-size: 19px;
+        color: var(--font2);
+        text-align: justify;
+        padding-bottom: 30px;
+
+    }
+    /* #4F33A5 #4F21CE #9e8ae0 #8261e6*/
+    .projects button{
+        background-color: var(--links2);
+        border: none;
+        text-decoration: none;
+        padding: 13px;
+        font-size: 16px;
+        border-radius: 30px;
+        color: var(--bg);
+    }
+
+    .projects  button:hover{
+        background-color: var(--links);
+        transform: scale(1.1);
+        transition: transform .3s ease-in-out, background-color .5s ease-in-out;
+
+    }
+
+    #cordel_pai{
+        padding-bottom: 20px;
+    }
+
+    #cordel{
+        width: 200px;
+        height: 120px;
+        border-radius: 10px;
+    }
+
+    #cordel_box{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: 40px;
+        padding-bottom: 30px;
+        margin: auto;
+        width: 350px;
+        border: 2px var(--links) solid;
+    }
+
+    #title_cordel{
+        color: var(--links2);
+        font-weight: 500;
+        padding: 10px;
+        padding-bottom: 30px;
+    }
+    
+    .contacts a{
+        text-align: center;
+        padding: 10px;
+        text-decoration: none;
+        font-size: 24px;
+        background-color: var(--bg2);
+        border-radius: 100px;
+        border: 2px solid var(--border);
+    }
+    
+    .contacts  a:active{
+        border: 2px solid var(--links2);
+        background-color: var(--links2);
+        color: var(--bg);
+        text-shadow: 1px 1px 10px #9e8ae00c;
+        transition: color .3s ease-in-out, background-color .3s ease-in-out, border .3s ease-in-out;
+    }
+    
+    .contacts p{
+        padding-top: 25px;
+    }
+    
+    #icons_contact{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 80px;
+        text-align: center;
+    }
+
+    
+footer{
+    background-color: #030108;
+    margin: 0%;
+    padding: 10px;
+    text-align: center;
+    font-size: 12px;
+}
