--- a/css/style.css
+++ b/css/style.css
@@ -161,8 +161,9 @@ i{
 }
 .about_me{
     padding: 50px;
-    border-radius: 15px;
+    border-radius: 10px;
     border: 2px solid var(--border);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.301);
     background: var(--bg2);
     width: 500px;
 }
@@ -183,7 +184,7 @@ i{
     padding-bottom: 10px;
     margin-top: 60px;
     border: 2px solid var(--border);
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.205);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.301);
 }
 
 .skills > h1{
@@ -219,74 +220,89 @@ i{
     transition: border .3s;
 }
 
-.projects{
-    min-width: 300px;
-    max-width: 800px;
-    margin: auto;
-    padding-top: 150px;
+.projects_container{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    height: 800px;
 }
 
-.projects h1{
+.projects_items{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    gap: 10px;
+}
+
+.projects_container h1{
     text-align: center;
     padding-bottom: 100px;
 }
 
-.projects h2{
+.projects_container h2{
     text-align: center;
     padding: 20px;
     color: var(--links2);
     font-weight: 500;
 }
 
-.projects  p{
-    font-size: 24px;
+.projects_container  p{
+    font-size: 22px;
     color: var(--font2);
     text-align: justify;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     
 }
 /* #4F33A5 #4F21CE #9e8ae0 #8261e6*/
-.projects button{
+.projects_container button{
     background-color: var(--links2);
     border: none;
     text-decoration: none;
-    padding: 13px;
-    font-size: 18px;
-    border-radius: 30px;
+    padding: 10px;
+    width: 300px;
+    font-size: 20px;
+    border-radius: 0px 0px 10px  10px ;
     color: var(--bg);
 }
 
-.projects  button:hover{
+.projects_container  button:hover{
+    font-size: 22px;
+    border-radius: 10px;
     background-color: var(--links);
     transform: scale(1.1);
-    transition: transform .3s ease-in-out, background-color .5s ease-in-out;
+    transition: transform .3s ease-in-out, background-color .5s ease-in-out, border-radius .3s ease-in-out, font-size .1s ease-in-out;
 
 }
 
-#cordel_pai{
-    padding-bottom: 20px;
+#iframe_box{
+    /* padding-bottom: px; */
 }
 
-#cordel{
-    width: 250px;
+#iframe{
+    width: 300px;
     height: 126px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
-#cordel_box{
+#item_box{
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 30px;
+    padding: 20px;
     padding-bottom: 30px;
     margin: auto;
-    width: 400px;
+    width: 350px;
+    height: 500px;
     border: 2px var(--links) solid;
 }
 
-#title_cordel{
-    padding: 10px;
+#item_title{
+    padding: 5px;
 }
 
 .contacts{
