--- a/css/tablet.css
+++ b/css/tablet.css
@@ -132,71 +132,89 @@
     }
     
 
-    .projects{
+    .projects_container{
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
         justify-content: center;
         align-content: center;
-        padding-top: 150px;
+        height: 1500px;
     }
-
-    .projects h2{
+    
+    .projects_items{
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        gap: 10px;
+    }
+    
+    .projects_container h1{
+        text-align: center;
+        padding-bottom: 100px;
+    }
+    
+    .projects_container h2{
+        text-align: center;
+        padding: 20px;
         color: var(--links2);
         font-weight: 500;
     }
-
-    .projects  p{
-        font-size: 19px;
+    
+    .projects_container  p{
+        font-size: 20px;
         color: var(--font2);
         text-align: justify;
-        padding-bottom: 30px;
-
+        padding-bottom: 100px;
+        
     }
     /* #4F33A5 #4F21CE #9e8ae0 #8261e6*/
-    .projects button{
+    .projects_container button{
         background-color: var(--links2);
         border: none;
         text-decoration: none;
-        padding: 13px;
-        font-size: 16px;
-        border-radius: 30px;
+        padding: 10px;
+        width: 300px;
+        font-size: 18px;
+        border-radius: 0px 0px 10px  10px ;
         color: var(--bg);
     }
-
-    .projects  button:hover{
+    
+    .projects_container  button:hover{
+        font-size: 20px;
+        border-radius: 10px;
         background-color: var(--links);
         transform: scale(1.1);
-        transition: transform .3s ease-in-out, background-color .5s ease-in-out;
-
+        transition: transform .3s ease-in-out, background-color .5s ease-in-out, border-radius .3s ease-in-out, font-size .1s ease-in-out;
+    
     }
-
-    #cordel_pai{
-        padding-bottom: 20px;
+    
+    #iframe_box{
+        /* padding-bottom: px; */
     }
-
-    #cordel{
-        width: 200px;
-        height: 120px;
-        border-radius: 10px;
+    
+    #iframe{
+        width: 300px;
+        height: 140px;
+        border-radius: 10px 10px 0px 0px;
     }
-
-    #cordel_box{
+    
+    #item_box{
+        border-radius: 5px;
         display: flex;
         flex-direction: column;
         text-align: center;
-        padding: 40px;
+        padding: 20px;
         padding-bottom: 30px;
         margin: auto;
-        width: 350px;
+        width: 450px;
+        height: 500px;
         border: 2px var(--links) solid;
     }
-
-    #title_cordel{
-        color: var(--links2);
-        font-weight: 500;
-        padding: 10px;
-        padding-bottom: 30px;
+    
+    #item_title{
+        padding: 5px;
     }
     
     .contacts a{
